# AlphaForge

./: .gitignore  combine_AFF.py  csv2md.py  exp_AFF_calc_result.ipynb  factor.md  output.md  pyproject.toml  requirements.txt  stock_data_poc.py  train_AFF.py
alphagen/data/: tree.py
data_collection/: alphalogger.py  fetch_baostock_data.py  qlib_dump_bin.py
gan/dataset/: collector.py
gan/network/: generater.py  loss.py  masker.py  predictor.py
gan/utils/: builder.py  data.py  pool.py  qlib.py
test/: issue.md  testcuda.py  testing_plan.md  testqlib.py
